# advent-of-code

./: day10.py  day12.py  day15.py  day16.py  day17.py  day2.py  day20.py  day3.py  day4.py  day6.py  day7.py
2015/: .gitignore  README.md
2015/day1/src/: main.rs
2015/day10/src/: main.rs
2015/day11/src/: main.rs
2015/day12/: Cargo.toml  input.json
2015/day12/src/: main.rs
2015/day13/: Cargo.toml
2015/day13/benches/: my_benchmark.rs
2015/day13/src/: lib.rs  main.rs
2015/day14/: Cargo.toml
2015/day14/src/: main.rs
2015/day15/src/: main.rs
2015/day16/: Cargo.toml
2015/day16/src/: main.rs
2015/day17/: Cargo.toml
2015/day17/src/: main.rs
2015/day18/src/: main.rs
2015/day19/src/: main.rs
2015/day2/src/: main.rs
2015/day20/: Cargo.toml
2015/day20/src/: main.rs
2015/day21/: Cargo.toml
2015/day21/src/: main.rs
2015/day3/src/: main.rs
2015/day4/: Cargo.toml
2015/day4/src/: main.rs
2015/day5/src/: main.rs
2015/day6/: Cargo.toml
2015/day6/src/: main.rs
2015/day7/: Cargo.toml
2015/day7/src/: main.rs
2015/day8/: Cargo.toml
2015/day8/src/: main.rs
2015/day9/: Cargo.toml
2015/day9/src/: main.rs
2017/: README.md  day1.py  day11.py  day13.py  day14.py  day18.py  day19.py  day5.py  day8.py  day9.py
2020/: day1.py  day10.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2021/: day1.go  day1_test.go  go.mod
2021/day1/: day1.go
2021/day2/: day2.go  day2_test.go
2021/day4/: day4.go  day4_test.go
2021/day5/: Cargo.toml
2021/day5/src/: main.rs
2021/day6/src/: main.rs
(+1 files in other folders)
