[package]
name = "day13"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
lazy_static = "1.4.0"
itertools = "0.10.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false